--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -13,16 +13,12 @@
             <local:ObjectToBooleanConverter x:Key="NullToVisibleConverter"
                                             Default="True"
                                             Others="False">
-                <local:ObjectToBooleanConverter.InnerConverter>
-                    <local:BooleanToVisibilityConverter BooleanForVisible="True" />
-                </local:ObjectToBooleanConverter.InnerConverter>
+                <local:BooleanToVisibilityConverter BooleanForVisible="True" />
             </local:ObjectToBooleanConverter>
             <local:ObjectToBooleanConverter x:Key="NullToCollapsedConverter"
                                             Default="True"
                                             Others="False">
-                <local:ObjectToBooleanConverter.InnerConverter>
-                    <local:BooleanToVisibilityConverter BooleanForVisible="False" />
-                </local:ObjectToBooleanConverter.InnerConverter>
+                <local:BooleanToVisibilityConverter BooleanForVisible="False" />
             </local:ObjectToBooleanConverter>
             <local:LengthConverter x:Key="LengthConverter" />
             <local:EmptyConverter x:Key="EmptyConverter" />
@@ -34,30 +30,22 @@
             <local:RangeToBooleanConverter x:Key="ZeroToVisibleConverter"
                                            Min="-0.1"
                                            Max="0.1">
-                <local:RangeToBooleanConverter.InnerConverter>
-                    <local:BooleanToVisibilityConverter BooleanForVisible="True" />
-                </local:RangeToBooleanConverter.InnerConverter>
+                <local:BooleanToVisibilityConverter BooleanForVisible="True" />
             </local:RangeToBooleanConverter>
             <local:OperationStateToBrushConverter x:Key="OperationStateToBrushConverter" />
             <local:EnumToBooleanConverter x:Key="OperationStateToVisibilityConverter"
-                                            xmlns:VM="using:ExViewer.ViewModels"
-                                            Others="True">
+                                          xmlns:VM="using:ExViewer.ViewModels"
+                                          Others="True">
                 <local:EnumToBooleanConverter.ValueForFalse>
                     <VM:OperationState>NotStarted</VM:OperationState>
                 </local:EnumToBooleanConverter.ValueForFalse>
                 <local:EnumToBooleanConverter.ValueForTrue>
                     <VM:OperationState>Started</VM:OperationState>
                 </local:EnumToBooleanConverter.ValueForTrue>
-                <local:EnumToBooleanConverter.InnerConverter>
-                    <local:BooleanToVisibilityConverter BooleanForVisible="True" />
-                </local:EnumToBooleanConverter.InnerConverter>
+                <local:BooleanToVisibilityConverter BooleanForVisible="True" />
             </local:EnumToBooleanConverter>
-            <local:IntOffsetConverter x:Key="IndexToStringConverter"
-                                      Offset="1">
-                <local:IntOffsetConverter.InnerConverter>
-                    <local:StringConverter />
-                </local:IntOffsetConverter.InnerConverter>
-            </local:IntOffsetConverter>
+            <local:MathFuctionConverter x:Key="IndexToStringConverter"
+                                        Function="sin(x)+1" />
             <local:DateTimeToStringConverter x:Key="DateTimeToStringConverter" />
         </ResourceDictionary>
     </Application.Resources>
