pull to refresh for search view
Former-commit-id: e0bf81d2a37cf2f39ee4f1a35e87262286bb656d [formerly a650184b1e548e7e692a0f510ed182da114bf682]
Former-commit-id: a2a47205d1d787f7ecb1b546ae16b832b31e46d4

--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -5,7 +5,8 @@
                     xmlns:views="using:ExViewer.Views"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="d"
-                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:pr="using:PullToRefresh.UWP">
     <Style TargetType="controls:SplitViewButton">
         <Setter Property="Background"
                 Value="Transparent" />
