--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -4,6 +4,7 @@
       xmlns:local="using:ExViewer.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:pr="using:PullToRefresh.UWP"
       mc:Ignorable="d"
       xmlns:controls="using:ExViewer.Controls"
       xmlns:client="using:ExClient"
@@ -112,36 +113,40 @@
             </Grid>
         </AppBar>
 
-        <ListView x:Name="lv"
-                  Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
-                  ContinuumNavigationTransitionInfo.ExitElementContainer="True"
-                  ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
-                  Style="{StaticResource GalleryListViewStyle}"
-                  ItemClick="lv_ItemClick"
-                  RelativePanel.Below="ab"
-                  RelativePanel.AlignBottomWithPanel="True"
-                  RelativePanel.AlignLeftWithPanel="True"
-                  RelativePanel.AlignRightWithPanel="True">
-            <ListView.ItemTemplate>
-                <DataTemplate xmlns:c="using:ExClient"
-                              xmlns:controls="using:ExViewer.Controls"
-                              x:DataType="c:Gallery">
-                    <controls:GalleryViewer Gallery="{x:Bind}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.Footer>
-                <TextBlock HorizontalAlignment="Center"
-                           Margin="12"
-                           Style="{StaticResource BaseTextBlockStyle}"
-                           Visibility="{x:Bind VM.SearchResult.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
-                           Text="Loading more galleries..." />
-            </ListView.Footer>
-        </ListView>
-        <TextBlock Margin="12"
-                   Style="{StaticResource BaseTextBlockStyle}"
-                   Visibility="{x:Bind VM.SearchResult.IsEmpty, FallbackValue=Collapsed, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
-                   RelativePanel.Below="ab"
-                   RelativePanel.AlignHorizontalCenterWithPanel="True"
-                   Text="No hits found" />
+
+        <pr:PullToRefreshBox RelativePanel.Below="ab"
+                             RelativePanel.AlignBottomWithPanel="True"
+                             RelativePanel.AlignLeftWithPanel="True"
+                             RelativePanel.AlignRightWithPanel="True"
+                             RefreshInvoked="PullToRefreshBox_RefreshInvoked"
+                             Style="{StaticResource PullToRefreshBoxStyle}"
+                             Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
+            <ListView x:Name="lv"
+                      ItemsSource="{x:Bind VM.SearchResult, Mode=OneWay}"
+                      Style="{StaticResource GalleryListViewStyle}"
+                      ItemClick="lv_ItemClick">
+                <ListView.ItemTemplate>
+                    <DataTemplate xmlns:c="using:ExClient"
+                                  xmlns:controls="using:ExViewer.Controls"
+                                  x:DataType="c:Gallery">
+                        <controls:GalleryViewer Gallery="{x:Bind}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.Header>
+                    <TextBlock HorizontalAlignment="Center"
+                               Margin="12"
+                               Style="{StaticResource BaseTextBlockStyle}"
+                               Visibility="{x:Bind VM.SearchResult.IsEmpty, FallbackValue=Collapsed, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                               Text="No hits found" />
+                </ListView.Header>
+                <ListView.Footer>
+                    <TextBlock HorizontalAlignment="Center"
+                               Margin="12"
+                               Style="{StaticResource BaseTextBlockStyle}"
+                               Visibility="{x:Bind VM.SearchResult.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                               Text="Loading more galleries..." />
+                </ListView.Footer>
+            </ListView>
+        </pr:PullToRefreshBox>
     </RelativePanel>
 </Page>
